# applicative-slides

./: LambdaZagreb.cabal  README.md  index.html  stack.yaml
src/: ApplicativeDoExample.hs  ApplicativeExample.hs  EffExample.hs  FSharpApplicativeOptionParser.fs  FSharpParserExample.fsx  FreeApplicativeExample.hs  FreeMonadExample.hs  FreeTransExample.hs
