name:                LambdaZagreb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            -
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  -- exposed-modules:
  build-depends:       base, free >= 4.12.4, freer >= 0.2.4.1, text, transformers >= 0.5.2.0
  default-language:    Haskell2010
